<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".RegisterActivity" >


    <ScrollView


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:textSize="30dp"
                    android:textColor="@android:color/holo_red_light"
                    android:text="@string/app_name"
                    />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="16dp"
                android:text="User name: "
                android:textColor="@android:color/holo_blue_bright"
                />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="25"
                android:textColorHint="@color/cardview_light_background"
                android:textColor="@android:color/holo_red_light"
                android:imeOptions="actionNext"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:text="Password: "
                android:textColor="@android:color/holo_blue_bright" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="32"
                android:textColorHint="@color/cardview_light_background"
                android:textColor="@android:color/holo_red_light"
                android:imeOptions="actionNext"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:text="Name: "
                android:textColor="@android:color/holo_blue_bright" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:maxLength="32"
                android:textColorHint="@color/cardview_light_background"
                android:textColor="@android:color/holo_red_light"
                android:imeOptions="actionNext"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:text="Address: "
                android:textColor="@android:color/holo_blue_bright" />

            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/address"
                android:inputType="textPostalAddress|textCapWords|textNoSuggestions"
                android:maxLength="32"
                android:textColorHint="@color/cardview_light_background"
                android:textColor="@android:color/holo_red_light"
                android:imeOptions="actionNext"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:text="Phone: "
                android:textColor="@android:color/holo_blue_bright" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="32"
                android:textColorHint="@color/cardview_light_background"
                android:textColor="@android:color/holo_red_light"
                android:imeOptions="actionDone"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="8dp"
                    android:text="Choose one: "
                    android:textColor="@android:color/holo_blue_bright" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/pick"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/pickcpn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="20dp"
                        android:checked="true"
                        android:text="@string/company"
                        android:textColor="@android:color/holo_blue_bright" />

                    <RadioButton
                        android:id="@+id/pickstd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="20dp"
                        android:layout_toRightOf="@id/pickcpn"
                        android:text="@string/student"
                        android:textColor="@android:color/holo_blue_bright" />
                </RadioGroup>
            </RelativeLayout>


            <Button
                android:id="@+id/buttonNext"
                style="@style/DefaultButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_weight="1"

                android:text="@string/next" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/back_to_login"
                android:textColor="@android:color/holo_blue_bright" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
