<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >


        <ScrollView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg"
            android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="140dp"
                            android:layout_height="182dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="16dp"
                            android:src="@drawable/logo"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="User name: "
                            android:textColor="@android:color/holo_blue_bright"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"/>

                        <EditText
                            android:id="@+id/editTextEmail"
                            android:inputType="textEmailAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:textColorHint="@color/cardview_light_background"
                            android:textColor="@android:color/holo_red_light"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:maxLength="25"

                            />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="Password: "
                            android:textColor="@android:color/holo_blue_bright"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            />

                        <EditText
                            android:id="@+id/editTextPassword"
                            android:layout_width="match_parent"
                            android:inputType="textPassword"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:maxLength="32"
                            android:textColorHint="@color/cardview_light_background"
                            android:textColor="@android:color/holo_red_light"/>



                        <Button
                            android:id="@+id/buttonLogin"
                            style="@style/DefaultButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="16dp"
                            android:text="@string/login" />

                        <TextView
                            android:id="@+id/textViewCreateAccount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:gravity="center_horizontal" />
                </LinearLayout>
        </ScrollView>

</LinearLayout>
